--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -147,6 +147,7 @@
 <li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
@@ -155,7 +156,7 @@
 <li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
 <li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="cell-testers-for-prismatic.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
@@ -166,7 +167,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Equipments" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Equipments
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 
@@ -279,6 +280,7 @@
 <li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
 <li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
+<li><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester">Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -289,7 +291,7 @@
 <li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
 <li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
-<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic=battery-pack-testers.html" title="Prismatic Battery Pack Testers">Prismatic Battery Pack Testers</a></li>
 <li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
@@ -298,7 +300,7 @@
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Equipments">Other Accessorial Equipments</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 
@@ -353,25 +355,25 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/prismatic-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Cell Testers</h1>
+<h1 class="title text-dark">Cell Testers</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Prismatic Batteries Lines" href="prismatic-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Prismatic Batteries Lines" href="prismatic-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Cell Testers</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<span class="text-dark">Cell Testers</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
