--- a/cylindrical-battery-pack-testers-modules.html
+++ b/cylindrical-battery-pack-testers-modules.html
@@ -1,36 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
- <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
+  <head>
+<!-- Title -->
+<title>Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and . Join us and build a sustainable future." />
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies provides advanced Cylindrical battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications." />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="Indygreen Technologies careers, renewable energy jobs, solar jobs India, lithium battery jobs, EV mobility careers, hydrogen energy jobs, green technology jobs, clean energy careers, engineering jobs renewable energy, Indygreentech hiring" />
+<!-- Meta Keywords -->
+<meta name="keywords" content="Cylindrical battery pack testers, lithium battery testing equipment, battery pack testing systems, voltage testing, capacity testing, performance testing, lithium battery quality control, EV battery testers, BESS battery testers, Indygreen Technologies" />
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies" />
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
+<meta property="og:description" content="High-precision Cylindrical battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
+<meta property="og:site_name" content="Indygreen Technologies" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
-  <meta property="og:description" content="Join Indygreen Technologies and work on solar, battery, EV, and hydrogen projects. Explore exciting career opportunities today." />
-  <meta property="og:url" content="https://www.indygreentech.com/career.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Indygreen Technologies" />
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
+<meta name="twitter:description" content="Advanced Cylindrical battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
-  <meta name="twitter:description" content="We are hiring! Explore renewable energy job openings in solar, lithium batteries, EV mobility & hydrogen at Indygreen Technologies." />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/career.html" />
+
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -349,140 +349,54 @@
 </div>
 </section>
 <!--  -->
-<!-- ttm-page-title-row -->
-<section class="ttm-page-title-row" style="background: url(img/career-breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/cylindrical-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Career</h1>
+<h1 class="title text-dark">Cylindrical Battery Pack Testers Modules</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Career</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
+</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Cylindrical Batteries Lines" href="cylindrical-battery-pack-testers.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Battery Pack Testers</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<span class="text-dark">Cylindrical Battery Pack Testers Modules</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
 </div><!-- /.row -->  
 </div><!-- /.container -->                      
 </section>
-<!-- career -->
-<section class="career py-5 bg-light">
-<div class="container">
-<div class="row">
-<p>Dedicated & Smart Human Resource is strength of any organization. In order to achieve our aggressive goals, we continuously look forward to expand our team with people who have fire in their belly & zeal to excel. If you are the one, we have following openings at the moment :</p>
+<!-- About Us -->
+ 
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-image col-lg-5">
+          <img src="img/cylindrical-battery-inner.png" alt="Cylindrical Battery Pack testers" title="Cylindrical Battery Pack testers" class="w-100 mb-3"><br>
+    </div>
+    <div class="product-description col-lg-7 sort">
+       <h2><strong>Cylindrical Battery Pack testers Modules</strong></h2> <br>
+        <table>
+  <tr><td>Voltage Testing Range</td><td>20V - 100V</td></tr>
+  <tr><td>Current Testing Range</td><td>10A - 100A </td></tr>
+  <tr><td>Supporting Battery Pack</td><td>For Cylindrical</td></tr>
+  <tr><td>Testing parameter</td><td>Capacity, Current, voltage, Cyclelife</td></tr>
+  <tr><td>MES Interface</td><td>With date save and transferring function</td></tr>
+  <tr><td>Power supply</td><td>Single phase, AC220V</td></tr>
+</table>
+    </div>
 </div>
-</div>
-</section>
-<!-- current-and-opening -->
-<!-- <section class="current-and-opening py-5">
-<div class="container">
-<div class="row">
+</div> 
 
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile border-right">
-<span>Current</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
-
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile">
-<span>Opening</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
-
-</div>
-</div>
-</section> -->
-
-<!-- Job Post -->
-<section class="job-post py-5">
-<div class="container">
-<div class="row">
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-1.jpeg">
-  <img src="img/post-1.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-2.jpeg">
-  <img src="img/post-2.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-3.jpeg">
-  <img src="img/post-3.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-4.jpeg">
-  <img src="img/post-4.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-</div>
-</div>
-</section>
-
-<section class="form-career bg-light">
-<div class="container">
-<div class="main-title">
-<p>Apply Now</p>
-<div class="separator"></div>
-</div>
-<div class="row">
-<div class="form-item">
-<form name="mailfrm" action="mailer/contact.php" method="post" enctype="multipart/form-data">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="name" class="name"  placeholder="Name">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="email" name="email" class="email"  placeholder="Email">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="phone" class="phone"  placeholder="Phone">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="file" name="image"  class="" aria-invalid="false">
-</div>
-
-<!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">-->
-<!--<select class="select-img">-->
-<!--<option value="Select Job">Select Job</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-
-<!--</select>-->
-<!--</div>-->
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="address"  class=""   placeholder="Address" aria-invalid="false">
-</div>
-
-
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-textarea">
-<textarea name="message" type="text" class="message pt-3" placeholder="Message" required=""></textarea>
-</div>
-
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-btn text-center">
-<input type="submit" name="submit">
-</div>
-</div>
-</form>
-</div>
-</div>
-</div>
-</section>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
