--- a/solar-junction-box.html
+++ b/solar-junction-box.html
@@ -148,6 +148,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 <li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
@@ -156,7 +157,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 <li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
 <li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="cell-testers-for-prismatic.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
@@ -167,7 +168,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Equipments" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Equipments
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 
@@ -280,6 +281,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 <li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
 <li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
+<li><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester">Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -290,7 +292,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 <li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
 <li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
-<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic=battery-pack-testers.html" title="Prismatic Battery Pack Testers">Prismatic Battery Pack Testers</a></li>
 <li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
@@ -299,7 +301,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Equipments">Other Accessorial Equipments</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 
