--- a/sorting-machine.html
+++ b/sorting-machine.html
@@ -141,6 +141,7 @@
 <li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
@@ -149,7 +150,7 @@
 <li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
 <li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="cell-testers-for-prismatic.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
@@ -160,7 +161,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Equipments" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Equipments
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 
@@ -273,6 +274,7 @@
 <li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
 <li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
+<li><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester">Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -283,7 +285,7 @@
 <li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
 <li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
-<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic=battery-pack-testers.html" title="Prismatic Battery Pack Testers">Prismatic Battery Pack Testers</a></li>
 <li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
@@ -292,7 +294,7 @@
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Equipments">Other Accessorial Equipments</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 
@@ -347,25 +349,25 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/cylindrical-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Sorting Machine</h1>
+<h1 class="title text-dark">Sorting Machine</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Sorting Machine</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<span class="text-dark">Sorting Machine</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -381,7 +383,7 @@
     <div class="product-description col-lg-7 sort">
        <h2><strong>4 in one (18650 - 32700)</strong></h2> <br>
         <table>
-  <tr><td>Equipment capa city</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
+  <tr><td>Equipment capacity</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
   <tr><td>Work objects</td><td>18650/21700/26650/32700/32140 </td></tr>
   <tr><td>Sorting bins</td><td>Good products bin: 9 (5/9) bins; NG bin: 1 bin</td></tr>
   <tr><td>Testing parameter</td><td>AC IR; DC voltage; Open circuit</td></tr>
@@ -401,7 +403,7 @@
     <div class="product-description col-lg-7 sort">
        <h2><strong>For 33140</strong></h2> <br>
         <table>
-  <tr><td>Equipment capa city</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
+  <tr><td>Equipment capacity</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
   <tr><td>Work objects</td><td>33140 </td></tr>
   <tr><td>Sorting bins</td><td>Good products bin: 9 (5/9) bins; NG bin: 1 bin</td></tr>
   <tr><td>Testing parameter</td><td>AC IR; DC voltage; Open circuit</td></tr>
