--- a/battery-pack-testers.html
+++ b/battery-pack-testers.html
@@ -141,6 +141,7 @@
 <li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
@@ -149,7 +150,7 @@
 <li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
 <li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="cell-testers-for-prismatic.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
@@ -160,7 +161,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Equipments" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Equipments
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 
@@ -273,6 +274,7 @@
 <li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
 <li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
+<li><a href="cylindrical-battery-pack-testers.html" title="Cylindrical Battery Pack Tester">Cylindrical Battery Pack Tester</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -283,7 +285,7 @@
 <li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
 <li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
-<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic=battery-pack-testers.html" title="Prismatic Battery Pack Testers">Prismatic Battery Pack Testers</a></li>
 <li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
@@ -292,7 +294,7 @@
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Equipments">Other Accessorial Equipments</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 
@@ -374,9 +376,9 @@
 </section>
 <!-- About Us -->
  
-<div class="container py-5">
+<!--<div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
+
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="EOL Testers in India"><img src="img/eol-testers.png" class="card-img-top product-img" alt="EOL Testers in India" title="EOL Testers in India"></a>
@@ -391,7 +393,6 @@
       </div>
     </div>
 
-    <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="Power Battery Test System in India"><img src="img/power-battery.png" class="card-img-top product-img" alt="Power Battery Test System in India" title="Power Battery Test System in India"></a>
@@ -419,13 +420,27 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 <div class="container py-5">
   <div class="row g-4">
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="cylindrical-battery-pack-testers-modules.html"><img src="img/cylindrical-battery-pack-tester.png" class="card-img-top product-img" alt="20V - 100V / 10A - 100A" title="20V - 100V / 10A - 100A"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">20V - 100V / 10A - 100A</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="cylindrical-battery-pack-testers-modules.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Battery Module Test System in India"><img src="img/60v-300v.png" class="card-img-top product-img" alt="Battery Module Test System in India" title="Battery Module Test System in India"></a>
+        <img src="img/power-battery.png" class="card-img-top product-img" alt="Battery Module Test System in India" title="Battery Module Test System in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Battery Module Test System <br> (60V - 300V)</h5>
@@ -440,7 +455,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 300A in India"><img src="img/500v-1000v.png" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India"></a>
+        <img src="img/500v-1000v.png" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Battery Pack Test System <br> (500V - 1000V)</h5>
@@ -453,7 +468,23 @@
     </div>
   </div>
 </div>
-
+  <div class="container py-5">
+    <div class="row g-4">
+          <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/eol-testers.png" class="card-img-top product-img" alt="EOL Repower in India" title="EOL Repower in India">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">EOL Repower</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
