--- a/cylindrical-battery-pack-testers.html
+++ b/cylindrical-battery-pack-testers.html
@@ -1,36 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
- <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
+  <head>
+<!-- Title -->
+<title>Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and . Join us and build a sustainable future." />
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies provides advanced Cylindrical battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications." />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="Indygreen Technologies careers, renewable energy jobs, solar jobs India, lithium battery jobs, EV mobility careers, hydrogen energy jobs, green technology jobs, clean energy careers, engineering jobs renewable energy, Indygreentech hiring" />
+<!-- Meta Keywords -->
+<meta name="keywords" content="Cylindrical battery pack testers, lithium battery testing equipment, battery pack testing systems, voltage testing, capacity testing, performance testing, lithium battery quality control, EV battery testers, BESS battery testers, Indygreen Technologies" />
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies" />
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
+<meta property="og:description" content="High-precision Cylindrical battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
+<meta property="og:site_name" content="Indygreen Technologies" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
-  <meta property="og:description" content="Join Indygreen Technologies and work on solar, battery, EV, and hydrogen projects. Explore exciting career opportunities today." />
-  <meta property="og:url" content="https://www.indygreentech.com/career.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Indygreen Technologies" />
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
+<meta name="twitter:description" content="Advanced Cylindrical battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
-  <meta name="twitter:description" content="We are hiring! Explore renewable energy job openings in solar, lithium batteries, EV mobility & hydrogen at Indygreen Technologies." />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/career.html" />
+
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -349,140 +349,100 @@
 </div>
 </section>
 <!--  -->
-<!-- ttm-page-title-row -->
-<section class="ttm-page-title-row" style="background: url(img/career-breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/cylindrical-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Career</h1>
+<h1 class="title text-dark">Cylindrical Battery Pack Testers</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Career</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-dark">/</span>
+<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
+</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<span class="text-dark">Cylindrical Battery Pack Testers</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
 </div><!-- /.row -->  
 </div><!-- /.container -->                      
 </section>
-<!-- career -->
-<section class="career py-5 bg-light">
-<div class="container">
-<div class="row">
-<p>Dedicated & Smart Human Resource is strength of any organization. In order to achieve our aggressive goals, we continuously look forward to expand our team with people who have fire in their belly & zeal to excel. If you are the one, we have following openings at the moment :</p>
-</div>
-</div>
-</section>
-<!-- current-and-opening -->
-<!-- <section class="current-and-opening py-5">
-<div class="container">
-<div class="row">
+<!-- About Us -->
+ 
+<!--<div class="container py-5">
+  <div class="row g-4">
 
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile border-right">
-<span>Current</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="EOL Testers in India"><img src="img/eol-testers.png" class="card-img-top product-img" alt="EOL Testers in India" title="EOL Testers in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">EOL Testers</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile">
-<span>Opening</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Power Battery Test System in India"><img src="img/power-battery.png" class="card-img-top product-img" alt="Power Battery Test System in India" title="Power Battery Test System in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">Power Battery Test System</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="High voltage Battery Test System in India"><img src="img/high-voltage.png" class="card-img-top product-img" alt="High voltage Battery Test System in India" title="High voltage Battery Test System in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">High voltage Battery Test System</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="cylindrical-battery-pack-testers-modules.html"><img src="img/cylindrical-battery-pack-tester.png" class="card-img-top product-img" alt="20V - 100V / 10A - 100A" title="20V - 100V / 10A - 100A"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">20V - 100V / 10A - 100A</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="cylindrical-battery-pack-testers-modules.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-</div>
-</div>
-</section> -->
-
-<!-- Job Post -->
-<section class="job-post py-5">
-<div class="container">
-<div class="row">
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-1.jpeg">
-  <img src="img/post-1.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-2.jpeg">
-  <img src="img/post-2.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-3.jpeg">
-  <img src="img/post-3.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-4.jpeg">
-  <img src="img/post-4.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-</div>
-</div>
-</section>
-
-<section class="form-career bg-light">
-<div class="container">
-<div class="main-title">
-<p>Apply Now</p>
-<div class="separator"></div>
-</div>
-<div class="row">
-<div class="form-item">
-<form name="mailfrm" action="mailer/contact.php" method="post" enctype="multipart/form-data">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="name" class="name"  placeholder="Name">
+    <!-- Card 2 -->
+  </div>
 </div>
 
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="email" name="email" class="email"  placeholder="Email">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="phone" class="phone"  placeholder="Phone">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="file" name="image"  class="" aria-invalid="false">
-</div>
-
-<!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">-->
-<!--<select class="select-img">-->
-<!--<option value="Select Job">Select Job</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-
-<!--</select>-->
-<!--</div>-->
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="address"  class=""   placeholder="Address" aria-invalid="false">
-</div>
-
-
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-textarea">
-<textarea name="message" type="text" class="message pt-3" placeholder="Message" required=""></textarea>
-</div>
-
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-btn text-center">
-<input type="submit" name="submit">
-</div>
-</div>
-</form>
-</div>
-</div>
-</div>
-</section>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
