--- a/dum.html
+++ b/dum.html
@@ -288,7 +288,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Equipments" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Equipments
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 
